# enterprise-agent-toolkit

./: .gitignore  01-case-study-financial-services-loan-processing.md  02-case-study-healthcare-patient-care-orchestration.md  03-case-study-manufacturing-smart-factory-ecosystem.md  04-proposal-template-level1-quick-wins.poml  05-proposal-template-level2-analytics.poml  06-proposal-template-level3-transformation.poml  07-contract-template-pilot-engagement.poml  08-roi-calculator-interactive.html  09-competitive-comparison-why-not-big-consulting.md  10-strategy-workshop-agenda-template.md  11-template-rag-chatbot-microsoft-copilot.poml  12-template-multi-agent-banking-system.poml  13-template-data-mining-agent-level2.poml  14-presentation-executive-vision-ai-organism.html  15-presentation-technical-possibilities-scope-t.html  16-presentation-implementation-gallery-level123.html  17-assessment-vision-discovery-questionnaire.html  18-calculator-roi-interactive.html  19-template-chat-agent-semantic-kernel.md  20-template-chat-agent-implementation.py  21-template-chat-agent-deploy.sh  22-template-classifier-agent-document-processing.md  23-template-classifier-agent-implementation.py  24-template-classifier-agent-deploy.sh  25-template-classifier-agent-categories.yaml  30-microsoft-solution-accelerator-showcase.html  README.md  index.html
ai-engagement-features/multi-agent-platform/backend/: Dockerfile  pyproject.toml
ai-engagement-features/multi-agent-platform/backend/app/: backend_pre_start.py  main.py  tests_pre_start.py
ai-engagement-features/multi-agent-platform/backend/app/alembic/: env.py
ai-engagement-features/multi-agent-platform/backend/app/alembic/versions/: 1344a1718e96_add_rbac_group_role_relationship.py  6549012a1e46_mcp_tool.py  7cd96407889b_source_id_is_allowed_to_be_null.py  cd8d7f25f9cf_add_rbac.py  e3a006cc9152_first_initial.py  ea5dc3c60f92_mcp_tool2.py
ai-engagement-features/multi-agent-platform/backend/app/api/: deps.py  main.py
ai-engagement-features/multi-agent-platform/backend/app/api/routes/: apikeys.py  graphs.py  groups.py  llmmodel.py  login.py  members.py  provider.py  roles.py  subgraphs.py  teams.py  threads.py  toolprovider.py  tools.py  uploads.py  users.py  utils.py
ai-engagement-features/multi-agent-platform/backend/app/core/: config.py  database.py  db.py  security.py  state.py
ai-engagement-features/multi-agent-platform/backend/app/core/auth/: model_provider_auth.py  tool_provider_auth.py
ai-engagement-features/multi-agent-platform/backend/app/core/graph/: build.py  members.py  messages.py
ai-engagement-features/multi-agent-platform/backend/app/core/mcp/: aiclient_utils.py  mcp_manage.py
ai-engagement-features/multi-agent-platform/backend/app/core/model_providers/: __init__.py  model_provider_manager.py
ai-engagement-features/multi-agent-platform/backend/app/core/rag/: document_processor.py  embeddings.py  qdrant.py  ragtest_delete.py
ai-engagement-features/multi-agent-platform/backend/app/core/tools/: __init__.py  api_tool.py  response_formatter.py  retriever_tool.py  tool.py  tool_invoker.py  tool_manager.py  utils.py
ai-engagement-features/multi-agent-platform/backend/app/core/workflow/: build_workflow.py
ai-engagement-features/multi-agent-platform/backend/app/curd/: groups.py  modelprovider.py  models.py  roles.py  tool.py  toolprovider.py  users.py
ai-engagement-features/multi-agent-platform/backend/app/db/: models.py
ai-engagement-features/multi-agent-platform/backend/app/db/models/: rbac.py  toolprovider.py
ai-engagement-features/multi-agent-platform/backend/app/db/utils/: permission_checker.py  permission_decorator.py
ai-engagement-features/multi-agent-platform/backend/app/tasks/: tasks.py
ai-engagement-features/multi-agent-platform/backend/docker/: entrypoint.sh
(+400 files in other folders)
